[package]
name = "vmi"
version = "0.1.0"
authors = ["Jonathon Belotti <jonathon.i.belotti@gmail.com>"]
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.63"
clap = { version = "4.5.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
